Fix PT43, Lesson51-52 and add example into Lesson45.

--- a/Урок 41-48. ООП/Python - PT43.html
+++ b/Урок 41-48. ООП/Python - PT43.html
@@ -92,7 +92,7 @@
           <li>Удаление задачи
             <ul>
               <li>Принимает <span class="hl-text">название задачи</span>.</li>
-              <li>Если задача не найдена в списке, то <span class="hl-text">добавляет её в список задач</span>. <span
+              <li>Если задача найдена в списке, то <span class="hl-text">удаляет её из списка задач</span>. <span
                   class="hl-text">Возвращает</span> <code class="python"><b>True</b></code>.</li>
               <li>В противном случае <span class="hl-text">возвращает</span> <code class="python"><b>False</b></code>.
               </li>
