--- a/Урок 15-20. Циклы/Python - HW20.html
+++ b/Урок 15-20. Циклы/Python - HW20.html
@@ -179,9 +179,10 @@
         <p>Выбран <span class="hl-text">пункт 2</span>:
         <ul>
           <li>Программа <span class="hl-text">запрашивает с консоли идентификатор клиента</span>.</li>
-          <li>Если введённый идентификатор совпадает с идентификатором клиента, то программа <span
-              class="hl-text">увеличивает на <code class="python"><b>1</b></code> товар</span>, который указан у
-            клиента, и <span class="hl-text">выдаёт клиенту товар в аренду</span>.</li>
+          <li>Если введённый идентификатор совпадает с идентификатором клиента и у клиента есть арендованный товар, то
+            программа <span class="hl-text">увеличивает на <code class="python"><b>1</b></code> соответствующий товар на
+              складе</span>, который указан у клиента, и <span class="hl-text">убирает арендованный товар у
+              клиента</span>.</li>
         </ul>
         </p>
 
