--- a/Урок 21-27. Строки. Списки/Python - HW22.html
+++ b/Урок 21-27. Строки. Списки/Python - HW22.html
@@ -26,14 +26,14 @@
       <div class="right-rect">
         <h2>Домашнее Задание 22.1</h2>
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку с примером</span>, <span
-            class="hl-text">проверяет правильность использования скобок</span> и затем <span class="hl-text">она выводит
-            в консоль</span> <code class="python"><b>"Скобки расставлены неверно."</b></code> или <code
+            class="hl-text">проверяет правильность использования круглых скобок</span> и затем <span class="hl-text">она
+            выводит в консоль</span> <code class="python"><b>"Скобки расставлены неверно."</b></code> или <code
             class="python"><b>"Скобки расставлены верно."</b></code>.</p>
         <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите строку примера: <span class="input">2 + (10 - 5 - (2 + 10)</span>
 
-Открывающих скобок больше, чем закрывающих.</code></pre>
+Скобки расставлены неверно.</code></pre>
         </div>
       </div>
       <div class="right-rect">
@@ -42,11 +42,11 @@
             class="hl-text">выводит в консоль на каждой новой строке предложение до точки включительно</span>.</p>
         <h3>Пример работы в консоли:</h3>
         <div class="console">
-          <pre><code>Введите строку: <span class="input">abc. def. hij.</span>
+          <pre><code>Введите строку: <span class="input">abc def hij. klm nop. qrs.</span>
 
-abc.
-def.
-hij.</code></pre>
+abc def hij.
+klm nop.
+qrs.</code></pre>
         </div>
       </div>
       <div class="right-rect">
