--- a/Урок 28-34. Функции. Модули/Python - HW34.html
+++ b/Урок 28-34. Функции. Модули/Python - HW34.html
@@ -140,7 +140,7 @@
 ...</code></pre>
             </div>
           </li>
-          <li>Реализуйте через функцию <span class="function"><b>get_students_str</b></span>:
+          <li>Реализуйте через функцию <span class="function"><b>student_list_to_str_list</b></span>:
             <ul>
               <li>Функция принимает <span class="hl-text">список студентов</span>.</li>
               <li>Применяет функцию <span class="function"><b>student_to_str</b></span> (см. ниже) для каждого студента.
