--- a/Урок 37-40. Кортежи. Множества. Словари/Python - HW38.html
+++ b/Урок 37-40. Кортежи. Множества. Словари/Python - HW38.html
@@ -41,7 +41,7 @@
         </p>
         <h3>Подсказка:</h3>
         <p>Код и алгоритм поиска последовательности символов можете посмотреть на <code
-            class="python"><b>24</b></code>-м уроке.</p>
+            class="python"><b>24</b></code>-м уроке или в домашнем задании 24.</p>
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 38.2</h2>
