--- a/Урок 41-48. ООП/Python - HW46.html
+++ b/Урок 41-48. ООП/Python - HW46.html
@@ -53,7 +53,12 @@
                             <li>Принимает <span class="hl-text">число</span>.</li>
                             <li>Увеличивает <span class="hl-text">текущий опыт на число</span>.</li>
                             <li>Если текущий опыт больше-равен требуемого опыта для следующего уровня, то <span
-                                    class="hl-text">вызывает повышение уровня</span>.</li>
+                                    class="hl-text">находит разницу между текущим опытом и требуемым опытом</span>,
+                                <span class="hl-text">вызывает повышение уровня</span>.
+                            </li>
+                            <li>Повторяет действия, начиная с <span class="hl-text">увеличивания текущего опыта на
+                                    полученную разницу</span> до тех пор, пока эта разница больше-равна требуемого опыта
+                                для следующего уровня.</li>
                         </ul>
                     </li>
                 </ul>
