--- a/Урок 41-48. ООП/Python - PT43.html
+++ b/Урок 41-48. ООП/Python - PT43.html
@@ -45,7 +45,7 @@
           <li>Понижение приоритета
             <ul>
               <li>Ничего не принимает.</li>
-              <li>Если приоритет больше <code class="python"><b>0</b></code>, то <span class="hl-text">уменьшает
+              <li>Если приоритет больше <code class="python"><b>1</b></code>, то <span class="hl-text">уменьшает
                   приоритет на <code class="python"><b>1</b></code></span>.</li>
             </ul>
           </li>
@@ -71,13 +71,20 @@
         <ul>
           <li>Конструктор</li>
           <li>Геттер</li>
-          <li>Поиск задачи
+          <li>Поиск индекса задачи
             <ul>
               <li>Принимает <span class="hl-text">название задачи</span>.</li>
               <li>Если задача с указанным названием найдена, то <span class="hl-text">возвращает индекс задачи в
                   списке</span>.</li>
               <li>В противном случае <span class="hl-text">возвращает</span> <code class="python"><b>-1</b></code>.
               </li>
+            </ul>
+          </li>
+          <li>Поиск задачи
+            <ul>
+              <li>Принимает <span class="hl-text">название задачи</span>.</li>
+              <li>Если задача с указанным названием найдена, то <span class="hl-text">возвращает задачу</span>.</li>
+              <li>В противном случае <span class="hl-text">возвращает пустоту</span>.</li>
             </ul>
           </li>
           <li>Добавление задачи
