--- a/Урок 49-50. Разбор финальных проектов/Python - FP.html
+++ b/Урок 49-50. Разбор финальных проектов/Python - FP.html
@@ -58,7 +58,8 @@
           <li>Касса экскурсий</li>
           <li>Касса турагентства</li>
           <li>Агрегатор скидок</li>
-          <li class="no-padding-bottom">Касса автомастерской</li>
+          <li>Касса автомастерской</li>
+          <li class="no-padding-bottom">Касса приёма платежей</li>
         </ol>
         <h3>Темы для финального проекта по категории "Аренда":</h3>
         <ol class="num">
